syntax = "proto3";

package com.github.mxsm.protocol.protobuf.magpiebridge;
option java_package = "com.github.mxsm.protocol.protobuf.magpiebridge";
option java_multiple_files = true;

message MagpieBridge{
  //名称
  string magpieBridgeName = 1;

  string magpieBridgeAddress = 2;

  uint32 magpieBridgeId = 3;

  uint64 magpieBridgeCreateTimestamp = 4;
}